# craftassist

./: .flake8  .gitattributes  .gitignore  .gitmodules  CONTRIBUTING.md  Makefile  README.md  requirements.txt
.circleci/: config.yml  locobot_tests.sh
acl2020_submission/: Grammar_Spec_doc.md  README.md
client/: CMakeLists.txt
client/src/: agent.cpp  big_endian.h  block_data.h  block_map.cpp  block_map.h  blocking_queue.h  client.cpp  client.h  condition.h  craft_recipes.h  encoder.cpp  encoder.h  event.h  event_handler.cpp  event_handler.h  game_state.cpp  game_state.h  graphics.cpp  graphics.h  nbt_tag.cpp  nbt_tag.h  packet_reader.cpp  packet_reader.h  packet_writer.cpp  packet_writer.h  types.cpp  types.h  util.cpp  util.h
codetools/: autoformat_py_style.sh  check_and_fix_black_failures.sh  check_and_fix_py_style.sh  check_flake8_failures.sh  check_py_style.sh  check_typing.sh
data_scripts/: compare_directory_hash.sh  compute_and_upload_checksum.sh  fetch_aws_datasets.sh  fetch_aws_models.sh  upload_model_to_aws.sh
docker/: Dockerfile  Dockerfile.client  gitlfs_install.sh  local_install.sh  login.sh  promote.sh  run.echo.sh  run.fromenv.sh  run.server.sh
python/: agent_connection.py  argument_parser.py  config_parser.py  cuberite_process.py  edit_cuberite_config.py  example_agent_crafting.py  example_agent_random.py  ping_cuberite.py  place_blocks.py  recipes.py  render_one_block_change.py  render_schematic.py  repo.py  schematic_convert.py  visual_segmentation.py  wait_for_cuberite.py
render_scripts/: DS_RENDER_batch.sh  Full_2000_Result.csv  (+13 more)
(+3991 files in other folders)
